--- a/xslt_suse2/xhtml/static/css/susebooks.css
+++ b/xslt_suse2/xhtml/static/css/susebooks.css
@@ -186,11 +186,29 @@ html, body {
     display: block;
 }
 
-.toc-icon, .find-icon, .tools-icon, .book-icon, .prev-icon, .next-icon, #_find-button,
-#_content .ulink:after, .bubble-corner {
+.toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon,
+#_find-button, #_content .ulink:after, .bubble-corner {
     background-image: url(../images/icons.png);
     background-repeat: no-repeat;
 }
+
+/* A somewhat ugly trick to make the documents look okay even without stylesheet*/
+
+.toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon, #_find-button {
+    overflow: hidden;
+    height: 0 !important;
+}
+
+.toc-icon, .find-icon, #_header .book-icon, #_toolbar .prev-icon,
+#_toolbar .next-icon, #_find-button, #_bottom-navigation .prev-icon,
+#_bottom-navigation .next-icon {
+    padding: 36px 0 0;
+}
+
+#_fixed-header .book-icon, #_fixed-header .prev-icon, #_fixed-header .next-icon {
+    padding: 15px 0 0;
+}
+/* End ugliness. */
 
 
 #_header .book-link {
@@ -199,16 +217,15 @@ html, body {
     height: 36px;
 }
 
-.toc-icon, .find-icon, .tools-icon, #_header .book-icon, #_toolbar .prev-icon, #_toolbar .next-icon {
+.toc-icon, .find-icon, #_header .book-icon, #_toolbar .prev-icon, #_toolbar .next-icon {
     width: 36px;
-    height: 36px;
 }
 
 #_header .book-icon {
     background-position: 0px 0px;
 }
 
-#_header .book-icon:hover, #header .book-icon:focus, #header .book-icon:active {
+#_header .book-icon:hover, #_header .book-icon:focus, #_header .book-icon:active {
     background-position: 0px -36px;
 }
 
@@ -221,10 +238,9 @@ html, body {
     background-position: 0px -72px;
     margin: 1px 0;
     width: 18px;
-    height: 15px;
 }
 
-#_fixed-header .book-icon:hover, #fixed-header .book-icon:focus, #fixed-header .book-icon:active {
+#_fixed-header .book-icon:hover, #_fixed-header .book-icon:focus, #_fixed-header .book-icon:active {
     background-position: -18px -72px;
 }
 
@@ -308,7 +324,7 @@ html, body {
 
 /* Toolbar */
 
-#_toolbar-wrap{
+#_toolbar-wrap {
     margin: 0 0 15px;
     width: 100%;
     min-width: 400px;
@@ -636,12 +652,10 @@ html, body {
 
 #_find-button {
     width: 36px;
-    height: 36px;
     display: block;
     margin: 0 0 0 -18px;
     background-position: -72px 0px;
     float: left;
-    color: transparent;
     border: 0;
     background-color: transparent;
 }
@@ -712,7 +726,6 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 }
 
 #_fixed-header .prev-icon, #_fixed-header .next-icon {
-    height: 15px;
     width: 18px;
     display: block;
 }
@@ -815,7 +828,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     display: inline-block;
     border-radius: 5px;
     border: 1px solid rgba(20,20,20,0.2);
-    padding: 1px 5px;
+    padding: 1px 7px;
     color: #333;
     background-color: #EFEFF0;
 }
@@ -832,7 +845,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     text-align: center;
     border-radius: 4px 0 0 4px;
     border: 1px solid rgba(0,0,0,0.2);
-    margin: -1px 4px -2px -5px;
+    margin: -1px 7px -2px -7px;
     overflow: hidden;
 }
 
