--- a/xslt_suse2/xhtml/static/css/susebooks.css
+++ b/xslt_suse2/xhtml/static/css/susebooks.css
@@ -1507,36 +1507,21 @@ strong, b, #_content .authorgroup-label, .version-info .productname, .version-in
     overflow: hidden;
 }
 
-
-/* The following three rules should be considered make-shift fixes for DocBook's
-obnoxious image handling:
-   a) images on a web page should by default be as wide and tall as their pixel size
-      and the monitor allow, no? Now they are.
-   b) DocBook creates non-sensical tables and div.mediaobjects around images, so
-      let's style those, too.
-   c) Making a div that's exactly as wide as needed is a bit tricky (unless it's
-      floating ... should ponder that some time), so now there's a 100%-width
-      grey frame around images that should make people think that that's okay...*/
-/* Begin special rules */
-
-#_content .figure .mediaobject {
-    padding: 20px 10px;
+#_content div.figure .mediaobject {
+    max-width: 100%;
+    min-height: 60px;
+    text-align: center;
+    color: #999;
+    padding: 12px 10px;
     background-color: #333;
+    overflow: hidden;
 }
-
-#_content .figure table {
-    margin: 0 auto;
-}
-
-#_content .informalfigure table, #_content .informalfigure img, #_content .figure table {
-    width: auto !important;
-}
-
-/* End special rules*/
 
 #_content .figure img {
-    padding: 1px;
+    padding: 0;
     background-color: #FFF;
+    width: auto;
+    margin: 0 auto;
     /* Please clean this mess out in ~2014 -- leave only the line with "calc" in there */
     max-width: 100%;
     max-width: calc(100% - 2px);
@@ -1544,6 +1529,8 @@ obnoxious image handling:
     max-width: -webkit-calc(100% - 2px);
     display: block; /* inline images weirdly have some whitespace below them, thus block'ing */
 }
+
+
 
 #_content .figure-title {
     padding: 10px;
@@ -1574,11 +1561,17 @@ obnoxious image handling:
 #_content .informalfigure img {
     max-width: 100%;
     display: block; /* inline images weirdly have some whitespace below them, thus block'ing */
-    text-align: center;
     color: #999;
     margin: 24px 0;
     padding: 1px;
     border: 1px solid #202020;
+    width: auto;
+}
+
+#_content .procedure-contents > .informalfigure {
+    margin-left: 10px;
+    margin-right: 10px;
+
 }
 
 #_content .keycap {
@@ -1890,5 +1883,35 @@ body.draft {
         top: -21px;
         font-size: 13px;
         clear: both;
+    }
+}
+
+/* Optimize images for various screen heights. Some (1080 and 1024, 800 and 768
+   etc.) are bucketed. We assume 110px for added browser chrome (subtracted from
+   the @media max-height), and 170px for giving the image some context
+   (subtracted from the image max-height). */
+
+@media only screen and (max-height: 970px) {
+    #_content .informalfigure img, #_content .figure img {
+        max-height: 744px;
+    }
+}
+
+@media only screen and (max-height: 790px) {
+    #_content .informalfigure img, #_content .figure img {
+        max-height: 620px;
+    }
+}
+
+@media only screen and (max-height: 690px) {
+    #_content .informalfigure img, #_content .figure img {
+        max-height: 520px;
+    }
+}
+
+/* Make an exception here, so we don't get stamp-sized screenshots. */
+@media only screen and (max-height: 490px) {
+    #_content .informalfigure img, #_content .figure img {
+        max-height: 400px;
     }
 }
