XSLT_S2: Breadcrumbs: Fix duplicated links to highest level, introduce links to current page
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2248 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/xhtml/static/css/susebooks.css
+++ b/xslt_suse2/xhtml/static/css/susebooks.css
@@ -1035,6 +1035,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     -o-transition: background-color 0.2s ease-out 0.3s;
 }
 
+
 #_content .ulink:after {
     content: "\0020\2197";
     color: transparent;
@@ -1527,7 +1528,8 @@ strong, b, #_content .authorgroup-label, .version-info .productname, .version-in
     padding: 0 0 0 30px;
 }
 
-#_content .variablelist dd p, #_content .glossary dd p, #_content .toc dd p {
+#_content .variablelist dd > p, #_content .glossary dd > p,
+#_content .toc dd > p {
     margin: 0;
 }
 
