Remove line after article's titles and instead wrap the TOC in a div.line
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2250 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/xhtml/static/css/susebooks.css
+++ b/xslt_suse2/xhtml/static/css/susebooks.css
@@ -554,7 +554,7 @@ html, body {
     width: 50%;
     background-color: #333;
     padding: 0;
-    margin:0;
+    margin: 0 1px 0 0;
     height: 100%;
     border-left: 1px solid #666;
 }
