Add Bubble-TOC to articles
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2280 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/xhtml/static/css/susebooks.css
+++ b/xslt_suse2/xhtml/static/css/susebooks.css
@@ -540,7 +540,7 @@ html, body {
     padding: 0;
 }
 
-#_toolbar .bubble-container {
+#_toolbar .bubble-container, #_fixed-header .bubble-container {
     padding: 0 10px 10px;
 }
 
