CSS: resize bubble-toc for smaller windows
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2282 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/xhtml/static/css/susebooks.css
+++ b/xslt_suse2/xhtml/static/css/susebooks.css
@@ -1991,4 +1991,9 @@ body.draft {
     #_content .informalfigure img, #_content .figure img {
         max-height: 400px;
     }
+    
+        
+    #_bubble-toc {
+        height: 300px;
+    }
 }
