Update Title CSS (thanks to Tom for noticing)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2321 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/xhtml/static/css/susebooks.css
+++ b/xslt_suse2/xhtml/static/css/susebooks.css
@@ -1156,11 +1156,13 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 #_content .sect1 .title, .single #_content .sect1 .title {
     font-size: 28px;
     padding: 50px 0 5px;
+    text-align: left;
 }
 
 #_content .sect2 .title, .single #_content .sect2 .title {
     font-size: 22px;
     padding: 40px 0 0;
+    text-align: left;
 }
 
 #_content .sect3 .title, .single #_content .sect3 .title,
@@ -1168,6 +1170,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     font-size: 20px;
     font-weight: normal;
     padding: 33px 0 0;
+    text-align: left;
 }
 
 #_content .sect4 .title, .single #_content .sect4 .title,
@@ -1178,6 +1181,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     position: relative;
     top: -33px;
     z-index: 1;
+    text-align: left;
 }
 
 #_content .sect4 .title {
